--- a/guide/user-guide.html
+++ b/guide/user-guide.html
@@ -295,7 +295,7 @@
           </p>
           <ol class="step-list">
             <li>Open the generated Excel file</li>
-            <li>Press Alt+F11 to open VBA editor</li>
+            <li>Press Alt/Option+F11 to open VBA editor</li>
             <li>Insert > Module, then paste code from "vba_module_code.txt"</li>
             <li>
               Double-click "ThisWorkbook", paste code from
